--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -1,4 +1,4 @@
-name: Test & Deploy Grading Script to AWS Lambda
+name: Test & Deploy Evaluation Function to AWS Lambda
 
 on:
   push:
@@ -20,6 +20,10 @@ jobs:
       run:
         working-directory: app/
 
+    env:
+      REQUEST_SCHEMA_URL: https://raw.githubusercontent.com/lambda-feedback/request-response-schemas/master/request.json
+      RESPONSE_SCHEMA_URL: https://raw.githubusercontent.com/lambda-feedback/request-response-schemas/master/responsev2.json
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -33,7 +37,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest
-          python -m pip install -r tools/tools_requirements.txt
           python -m pip install -r requirements.txt
 
       - name: Lint with flake8
@@ -43,31 +46,39 @@ jobs:
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
-      - name: Test Handler functions
+      - name: Test Evaluation Function
         run: |
-          pytest -v tests/handling.py::TestHandlerFunction
-      - name: Test JSON schema
-        run: |
-          pytest -v tests/validation.py::TestSchemaValidation
-      - name: Test Grading functions
-        run: |
-          pytest -v tests/grading.py::TestGradingFunction
+          pytest -v evaluation_tests.py::TestEvaluationFunction
 
-  deploy:
-    name: Deploy
+  deploy-staging:
+    name: Deploy Staging
     needs: test
     runs-on: ubuntu-latest
     environment: production
+    env:
+      ECR_REPOSITORY: lambda-feedback-staging-functions-repository
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Generate Lambda and ECR Names from Repo Title
-        id: names
+      - name: Set config.json output
+        id: set_config_var
         run: |
-          python -c "import re;print('::set-output name=kebab::'+re.sub(r'(?<!^)(?=[A-Z])', '-', '${{ github.event.repository.name }}').lower())"
-          python -c "a='${{ github.event.repository.name }}';print('::set-output name=camel::'+a[0].lower()+a[1:])"
+          content=`cat ./config.json`
+          # the following lines are only required for multi line json
+          content="${content//'%'/'%25'}"
+          content="${content//$'\n'/'%0A'}"
+          content="${content//$'\r'/'%0D'}"
+          # end of optional handling for multi line json
+          echo "::set-output name=configJson::$content"
+
+      - name: set Evaluation Function Name
+        id: set_function_name
+        run: |
+          functionName="${{fromJson(steps.set_config_var.outputs.configJson).EvaluationFunctionName}}"
+          [[ -z "$functionName" ]] && { echo "Add EvaluationFunctionName to config.json" ; exit 1; }
+          echo "::set-output name=function_name::$functionName"
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -84,8 +95,7 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ steps.names.outputs.kebab }}
-          IMAGE_TAG: latest
+          IMAGE_TAG: ${{ steps.set_function_name.outputs.function_name }}
         run: |
           # Build docker image from algorithm, schema and requirements
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG app/
@@ -93,11 +103,87 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
-      - name: Update lambda function image
+      - name: deploy evaluation function
+        id: deploy-evaluation-function
+        env:
+          BACKEND_API_URL: https://hytqbudf4a.eu-west-1.awsapprunner.com
+          API_KEY: ${{ secrets.FUNCTION_ADMIN_API_KEY }}
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ steps.set_function_name.outputs.function_name }}
+        run: |
+          curl --location --request POST "$BACKEND_API_URL/grading-function/ensure" \
+          --header 'content-type: application/json' \
+          --data-raw "{
+              \"apiKey\": \"$API_KEY\",
+              \"dockerImageUri\": \"$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG\",
+              \"functionName\": \"$IMAGE_TAG\"
+          }"
+
+  deploy-production:
+    name: Deploy Production
+    needs: deploy-staging
+    runs-on: ubuntu-latest
+    environment: production
+    env:
+      ECR_REPOSITORY: lambda-feedback-production-functions-repository
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set config.json output
+        id: set_config_var
+        run: |
+          content=`cat ./config.json`
+          # the following lines are only required for multi line json
+          content="${content//'%'/'%25'}"
+          content="${content//$'\n'/'%0A'}"
+          content="${content//$'\r'/'%0D'}"
+          # end of optional handling for multi line json
+          echo "::set-output name=configJson::$content"
+
+      - name: set Evaluation Function Name
+        id: set_function_name
+        run: |
+          functionName="${{fromJson(steps.set_config_var.outputs.configJson).EvaluationFunctionName}}"
+          [[ -z "$functionName" ]] && { echo "Add EvaluationFunctionName to config.json" ; exit 1; }
+          echo "::set-output name=function_name::$functionName"
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.LAMBDA_CONTAINER_PIPELINE_AWS_ID }}
+          aws-secret-access-key: ${{ secrets.LAMBDA_CONTAINER_PIPELINE_AWS_SECRET }}
+          aws-region: eu-west-2
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build, tag, and push image to Amazon ECR
+        id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ steps.names.outputs.kebab }}
-          LAMBDA_FUNCTION_NAME: ${{ steps.names.outputs.camel }}
-          IMAGE_TAG: latest
+          IMAGE_TAG: ${{ steps.set_function_name.outputs.function_name }}
         run: |
-          aws lambda update-function-code --function-name $LAMBDA_FUNCTION_NAME --image-uri $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          # Build docker image from algorithm, schema and requirements
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG app/
+          # Push image to ECR
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+
+      - name: deploy evaluation function
+        id: deploy-evaluation-function
+        env:
+          BACKEND_API_URL: https://vnfapgr7gv.eu-west-1.awsapprunner.com
+          API_KEY: ${{ secrets.FUNCTION_ADMIN_API_KEY }}
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ steps.set_function_name.outputs.function_name }}
+        run: |
+          curl --location --request POST "$BACKEND_API_URL/grading-function/ensure" \
+          --header 'content-type: application/json' \
+          --data-raw "{
+              \"apiKey\": \"$API_KEY\",
+              \"dockerImageUri\": \"$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG\",
+              \"functionName\": \"$IMAGE_TAG\"
+          }"
